--- a/public/assets/css/requisicao.css
+++ b/public/assets/css/requisicao.css
@@ -1,13 +1,15 @@
-#conteudo {
+main {
+
+}
+#titulo {
  display: flex;
  flex-direction: column;
- background-color: #ddd;
- gap: 12px;
+ gap: 16px;
 }
 #titulo-box {
  font-size: 1.8rem;
  background-color: #eee;
- padding: 12px;
+ padding: 16px;
 }
 #titulo-box span {
  font-size: 1.8rem;
@@ -18,7 +20,19 @@
 
 
 #data-sessao {
- padding: 12px;
+ display: flex;
+ flex-direction: column;
+ background-color: #eee;
+ padding: 16px;
+ gap: 12px;
+}
+.data-head {
+ font-size: 1.5rem;
+ font-weight: bold;
+}
+.data-block {
+ display: flex;
+ gap: 32px;
 }
 .data-box {
  display: flex;
@@ -27,9 +41,8 @@
  gap: 4px;
 }
 .data-titulo {
- font-size: 1.0rem;
-}
-#data-abertura-input {
+ width: 100%;
+ font-size: 1rem;
 }
 .data-input {
  padding: 8px 10px;
@@ -50,47 +63,53 @@
 
 
 
+/*
+*{border: 1px solid blue;}
+*/
 
-
-
-
-#cabecalho {
+#items-container {
  display: flex;
- background-color: #ddd;
+ flex-direction: column;
+ background-color: #eee;
+ padding: 16px;
  gap: 12px;
 }
-.cabecalho-item {
- padding: 12px 8px;
+.item-head {
+ font-size: 1.5rem;
+ font-weight: bold;
 }
-
-
-
 #items {
+ display: flex;
+ flex-direction: column;
+ gap: 4px;
 }
 .item-box {
  display: flex;
  align-items: center;
  background-color: #fff;
+ border-radius: 8px;
+ border: 1px solid #aaa;
+ padding: 8px 12px 8px 8px;
  gap: 12px;
 }
-.item-box:hover {
- background-color: #eee;
- cursor: pointer;
+.item-imagem {
+ width: 64px;
+ height: 64px;
 }
-.item {
- padding: 8px;
-}
-.item-requisicao {
- min-width: 128px;
- width: 128px;
- text-align: center;
- max-width: 128px;
-}
-.item-centro-custo {
- min-width: 352px;
- width: 352px;
- max-width: 352px;
-}
-.item-justificativa {
+.item-info {
  width: 100%;
+}
+.item-nome {
+ width: 100%;
+ font-size: 1.2rem;
+}
+.item-quantidade {
+ width: 240px;
+ font-size: 1.1rem;
+}
+.item-entregue {
+ width: 160px;
+}
+.item-pendente {
+ width: 160px;
 }
