--- a/public/assets/css/requisicao.css
+++ b/public/assets/css/requisicao.css
@@ -1,16 +1,17 @@
-main {
+main {}
 
-}
 #titulo {
  display: flex;
  flex-direction: column;
  gap: 16px;
 }
+
 #titulo-box {
  font-size: 1.8rem;
  background-color: #eee;
  padding: 16px;
 }
+
 #titulo-box span {
  font-size: 1.8rem;
  font-weight: bold;
@@ -26,24 +27,55 @@ main {
  padding: 16px;
  gap: 12px;
 }
-.data-head {
+
+.data-head-box {
+ display: flex;
+}
+
+.data-head-text {
+ width: 100%;
  font-size: 1.5rem;
  font-weight: bold;
 }
+
+#data-salvar-botao {
+
+ width: 160px;
+ background-color: gainsboro;
+
+ font-size: 0.8rem;
+ border-radius: 4px;
+ letter-spacing: 1px;
+ word-spacing: 2px;
+ border-width: 2px;
+ cursor: pointer;
+}
+
+.data-salvar-botao-desabilitado {
+ display: none;
+}
+
+.data-alterada {
+ background-color: yellow;
+}
+
 .data-block {
  display: flex;
  gap: 32px;
 }
+
 .data-box {
  display: flex;
  flex-direction: column;
  align-items: start;
  gap: 4px;
 }
+
 .data-titulo {
  width: 100%;
  font-size: 1rem;
 }
+
 .data-input {
  padding: 8px 10px;
  border-radius: 6px;
@@ -63,9 +95,11 @@ main {
 
 
 
-/*
-*{border: 1px solid blue;}
-*/
+/* 
+* {
+ border: 1px solid blue;
+} */
+
 
 #items-container {
  display: flex;
@@ -74,15 +108,18 @@ main {
  padding: 16px;
  gap: 12px;
 }
+
 .item-head {
  font-size: 1.5rem;
  font-weight: bold;
 }
+
 #items {
  display: flex;
  flex-direction: column;
  gap: 4px;
 }
+
 .item-box {
  display: flex;
  align-items: center;
@@ -91,25 +128,38 @@ main {
  border: 1px solid #aaa;
  padding: 8px 12px 8px 8px;
  gap: 12px;
+ user-select: none;
 }
+
 .item-imagem {
  width: 64px;
  height: 64px;
 }
+
 .item-info {
  width: 100%;
 }
+
 .item-nome {
  width: 100%;
  font-size: 1.2rem;
 }
+
 .item-quantidade {
- width: 240px;
+ width: 160px;
  font-size: 1.1rem;
 }
+
 .item-entregue {
- width: 160px;
+ width: 224px;
 }
+
 .item-pendente {
- width: 160px;
+ width: 224px;
+}
+.item-vazio {
+ width: 100%;
+ text-align: center;
+ padding: 4px;
+ font-size: 1rem;;
 }
