--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -7,5 +7,6 @@ main {
     width: 100%;
     display: flex;
     flex-direction: column;
-    padding: 16px;    
+    padding: 16px;
+    //background-color: #eee;
 }
