--- a/public/assets/css/requisicao-adicionar-notafiscal.css
+++ b/public/assets/css/requisicao-adicionar-notafiscal.css
@@ -88,28 +88,140 @@ main {}
  width: 100%;
  height: 100%;
 
+ background-color: rgba(0,0,0, 0.5);
+}
+.modal-esconder {
+ display: none;
+}
+.modal-exibir {
  display: flex;
  justify-content: center;
  align-items: center;
-
- background-color: rgba(0,0,0, 0.5);
 }
 .modal-conteudo {
  position: relative;
- width: 512px;
- height: 448px;
+ width: 600px;
+ height: 420px;
+ display: flex;
+ flex-direction: column;
  background-color: #FFF;
- border: 1px solid red;
+ border-radius: 12px;
+}
+.modal-cabecalho {
+ display: flex;
+ align-items: center;
+ background-color: #eee;
+ border-radius: 12px 12px 0 0;
+ padding: 12px 12px 12px 28px;
+}
+.modal-cabecalho-titulo {
+ width: 100%;
+ font-size: 1.2rem;
+}
+.modal-cabecalho-botao-fechar {
+ width: 32px;
+ height: 32px;
+}
+.modal-cabecalho-botao-fechar:hover {
+ cursor: pointer;
+ background-color: #ddd;
+}
+.modal-corpo {
+ width: 100%;
+ height: 100%;
+ overflow: hidden;
+}
+.modal-rodape {
+ width: 100%;
+ display: flex;
+ justify-content: center;
+ padding: 12px;
+ border-radius: 0 0 12px 12px;
+}
+.modal-cabecalho-botao-confirmar {
+ width: 160px;
+ height: 32px;
+ font-size: 1.2rem;
+}
+/* FIM MODAL ////////////////////////////////////////////////////*/
+
+
+.select_selecionador_box {
+ display: flex;
+ flex-direction: column;
+ width: 100%;
+ height: 100%;
+ gap: 8px;
+ padding: 8px 16px;
+}
+.select_procurar {
+ width: 100%;
+ padding: 4px 8px;
+ font-size: 1rem;
+ background-color: #eee;
+ border-radius: 4px;
+}
+#select-lista {
+ width: 100%;
+ height: 100%;
+ display: flex;
+ flex-direction: column;
+ align-items: start;
+ gap: 6px;
+ overflow: hidden;
+ overflow-y: scroll;
+ border: 1px solid #444;
+ padding: 4px 8px;
+}
+
+.fornecedor-box {
+ width: 100%;
+ display: flex;
+ align-items: center;
+ background-color: #fff;
+ border-radius: 8px;
+ border: 1px solid #aaa;
+ padding: 8px 12px 8px 8px;
+ gap: 8px;
+ user-select: none;
+}
+.fornecedor-box:hover {
+ border: 1px solid blue;
+ background-color: #f0f0f0;
+ cursor: pointer;
+}
+.fornecedor-logo {
+ width: 48px;
+ height: 48px;
+ border: 1px solid #ccc;
+}
+.fornecedor-razaosocial, .fornecedor-cnpj {
+ font-size: 1.1rem;
+ padding: 1px 0;
+}
+.fornecedor-info {
+}
+.carregando {
+ width: 100%;
+ text-align: center;
+ font-size: 1.5rem;
 }
 
 
 
 
-/* 
+
+
+
+
+
+/*
 
 * {
  border: 1px solid blue;
-} */
+} 
+
+*/
 
 
 /*///////////////////////////////////////////////////////////////////
